--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,10 +1,8 @@
 [theme]
-
-primaryColor = "#E694FF"
-backgroundColor = "#00172B"
-secondaryBackgroundColor = "#0083B8"
-textColor = "#FFF"
-font = "sans serif"
-
+primaryColor="#6eb52f"
+backgroundColor="#f0f0f5"
+secondaryBackgroundColor="#e0e0ef"
+textColor="#262730"
+font="sans serif"
 [global]
 dataFrameSerialization = "legacy"
