--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,9 +1,8 @@
 [theme]
-primaryColor="#F63366"
-backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F0F2F6"
+primaryColor="#6eb52f"
+backgroundColor="#f0f0f5"
+secondaryBackgroundColor="#e0e0ef"
 textColor="#262730"
 font="sans serif"
 [global]
 dataFrameSerialization = "legacy"
-
